# architect

./: .gitignore
advancedPython/: Readme.md  async_ops.py  best_practices.py  descriptors_ops.py  dict_operations.py  external_apis.py  image_operations.py  memory_calculation.py  nlp_operations.py  pandas_advanced.py  pdf_operations.py  pyproject.toml  test.py  text_operations.py
