[tool.poetry]
name = "advancedpython"
version = "0.1.0"
description = ""
authors = ["manojkumarkpn <manojkumarkpn1192@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pympler = "^1.1"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
